# mistral-annot

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  turbo.json  vercel.json
apps/backend/: .env.example  config.py  main.py  pyproject.toml  test_api.sh
apps/backend/core/: extractor.py
apps/backend/tests/: test_api.py
apps/frontend/: .env.example  PDF_SECURITY_GUIDE.md  jest.config.json  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/frontend/__tests__/: components.test.tsx
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: FileUpload.tsx  LoadingSpinner.tsx  PDFViewer.tsx  Results.tsx  ThemeToggle.tsx
apps/frontend/src/config/: index.ts
apps/frontend/src/contexts/: ProcessingContext.tsx
apps/frontend/src/types/: react-pdf.d.ts
data/output/: sample-invoice.json  wordpress-pdf-invoice-plugin-sample.json
src/doc_extractor/: config.py  main.py
src/doc_extractor/core/: extractor.py
src/doc_extractor/viewer/: app.py
